fix: fix page height on safari

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-    height: 128px;
+    height: 180px;
     display: flex;
     flex-direction: row;
     align-items: center;
